--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.30.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.0"
